--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,36 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="progreso3mj.MainPage">
+             xmlns:vm="clr-namespace:progreso3mj.ViewModels"
+             x:Class="progreso3mj.Views.MainPage">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
+    <ContentPage.BindingContext>
+        <vm:MealSearchViewModel />
+    </ContentPage.BindingContext>
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+    <StackLayout Padding="10">
+        <Entry Text="{Binding SearchTerm}" Placeholder="Enter meal name" />
+        <Button Text="Search" Command="{Binding SearchCommand}" />
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+        <ListView ItemsSource="{Binding Meals}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <StackLayout>
+                            <Label Text="{Binding StrMeal}" FontSize="20" />
+                            <Label Text="{Binding StrCategory}" FontSize="16" />
+                            <Label Text="{Binding StrInstructions}" FontSize="14" />
+                            <Image Source="{Binding StrMealThumb}" HeightRequest="200" WidthRequest="200" />
+                        </StackLayout>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
-
+        <Button Text="View History" Clicked="OnHistoryButtonClicked" />
+    </StackLayout>
 </ContentPage>
