Funcionamiento correcto del historial, no hay desliegue de la informacion de la API

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -3,7 +3,7 @@
     x:Class="progreso3mj.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:progreso3mj"
+    xmlns:local="clr-namespace:progreso3mj.Views"
     Shell.FlyoutBehavior="Disabled"
     Title="progreso3mj">
 
@@ -11,5 +11,4 @@
         Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
-
 </Shell>
