--- a/HistoryPage.xaml
+++ b/HistoryPage.xaml
@@ -1,11 +1,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:vm="clr-namespace:YourNamespace"
-             x:Class="YourNamespace.HistoryPage">
-
-    <ContentPage.BindingContext>
-        <vm:MealSearchViewModel />
-    </ContentPage.BindingContext>
+             xmlns:vm="clr-namespace:progreso3mj.ViewModels"
+             x:Class="progreso3mj.Views.HistoryPage">
 
     <StackLayout Padding="10">
         <Button Text="Load History" Command="{Binding LoadHistoryCommand}" />
